feature(Predisposizione stream per ComBo): [PN-20832] [QA-16839] Added scenarios to test creation specifying DEFAULT as filter for status (no longer permitted)